Bug 3621: Ticket screen layout issue when filters are applied

--- a/src/shared/components/checkbox/checkbox.scss
+++ b/src/shared/components/checkbox/checkbox.scss
@@ -1,5 +1,6 @@
 .checkbox-button {
   cursor: pointer;
+  position: relative;
 }
 
 input[type=checkbox] {
